samples/_failures_safe/1761562175_e9286e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5069c37e.c: In function ‘main’:
./samples/SAFE/__tmp_5069c37e.c:175:9: error: expected declaration or statement at end of input
  175 |         printf(", Value='%s'\n", tokens[i].value);
      |         ^~~~~~
./samples/SAFE/__tmp_5069c37e.c:175:9: error: expected declaration or statement at end of input
